update for uni pcs

--- a/slides/02_intro_to_r_and_working_with_data.html
+++ b/slides/02_intro_to_r_and_working_with_data.html
@@ -1413,7 +1413,7 @@ ggplot(data = pigeon2, aes(x = population, y = distance)) +
 
 class: inverse
 
-# 🎉 Congratulations! Keep practising! 🎈 
+# 🎈 Congratulations! Keep practising! 🎂 
 
 
 
