--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -6,13 +6,6 @@
     <meta name="author" content="Emma Rand" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
-    <script src="libs/tile-view/tile-view.js"></script>
-    <script src="libs/js-cookie/js.cookie.js"></script>
-    <script src="libs/peerjs/peerjs.min.js"></script>
-    <script src="libs/tiny.toast/toast.min.js"></script>
-    <link href="libs/xaringanExtra-broadcast/broadcast.css" rel="stylesheet" />
-    <script src="libs/xaringanExtra-broadcast/broadcast.js"></script>
     <script src="libs/fabric/fabric.min.js"></script>
     <link href="libs/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-scribble/scribble.js"></script>
@@ -29,20 +22,24 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Introduction and Principles of reproducibility.
+]
+.subtitle[
 ## White Rose BBSRC DTP Training: An Introduction to Reproducible Analyses in R.
+]
+.author[
 ### Emma Rand
+]
+.institute[
 ### University of York, UK
+]
 
 ---
 
 
 
 
-<style>.shareagain-bar {
---shareagain-foreground: rgb(255, 255, 255);
---shareagain-background: rgba(0, 0, 0, 0.5);
-}</style>
 
 
 
@@ -59,6 +56,7 @@ div.grey { background-color:#d3d3d3; border-radius: 0px; padding: 0px;}
 
 
 ---
+
 class: inverse
 
 # Programme Overview
@@ -98,6 +96,7 @@ Chosen topics are: foundational, widely applicable, and transferable conceptuall
 ]
 
 ]
+
 ---
 # Programme overview
 
@@ -163,31 +162,6 @@ Audience: For those with previous experience of R such as having done "Introduct
 
 ]
 
----
-class: inverse
-
-# What is your previous experience? &lt;br&gt;Survey Results
-
-
----
-# Survey results 1/3
-
-
-The distribution of ratings you (n = 34) gave in the survey were:
-&lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-2-1.png" width="864" /&gt;
-
----
-# Survey results 2/3
-
-&lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-3-1.png" width="864" /&gt;
-
-
-
----
-# Survey results 3/3
-Please rate your level of comfort with...
-
-&lt;img src="01_intro_and_principles_of_repro_files/figure-html/unnamed-chunk-4-1.png" width="864" /&gt;
 
 ---
 class: inverse
@@ -209,17 +183,17 @@ Less than you probably think
 # Reproducibility is key!
 
 One definition
-*"... obtaining consistent results using the same input data; computational steps, methods, and code; and conditions of analysis. This definition is synonymous with “computational reproducibility"*. (National Academies of Sciences, Engineering Medicine, et al., 2019)
+*"... obtaining consistent results using the same input data; computational steps, methods, and code; and conditions of analysis. This definition is synonymous with “computational reproducibility"*. (National Academies of Sciences, Engineering Medicine et al., 2019)
 
  Also see 
 
 -  The Turing Way "Definitions for Reproducibility" 
--  National Science Foundation (Bollen Cacioppo, et al., 2015)
+-  National Science Foundation (Bollen Cacioppo et al., 2015)
 
 ---
 # Reproducibility is key!
 
-&lt;img src="../pics/reproducible-matrix.jpg" width="700px" /&gt;
+&lt;img src="pics/reproducible-matrix.jpg" width="700px" /&gt;
 
 .font60[
 How the Turing Way  defines reproducible research
@@ -239,12 +213,12 @@ How the Turing Way  defines reproducible research
 ---
 # Open Science
 
-&lt;img src="../pics/Foster.png" width="700px" /&gt;
+&lt;img src="pics/Foster.png" width="700px" /&gt;
 .font60[
 By Petr Knoth and Nancy Pontika - https://en.wikipedia.org/wiki/Open_science#/media/File:Os_taxonomy.png, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=61125075
 ]
 
-FAIR - Findable, Accessible, Interoperable, Reusable (Wilkinson Dumontier, et al., 2016)
+FAIR - Findable, Accessible, Interoperable, Reusable (Wilkinson Dumontier et al., 2016)
 
 
 
@@ -258,7 +232,7 @@ class: inverse
 # Rationale for scripting analysis
 Science is the generation of ideas, designing work to test them and reporting the results.
 
-&lt;img src="../pics/rationale1.png" width="600px" /&gt;
+&lt;img src="pics/rationale1.png" width="600px" /&gt;
 
 .pull-left[
 Generating the results
@@ -273,7 +247,7 @@ Analysing and reporting them
 We ensure reproducibility of laboratory and field work by planning and recording in lab books and using standard protocols. 
 
 
-&lt;img src="../pics/rationale2.png" width="600px" /&gt;
+&lt;img src="pics/rationale2.png" width="600px" /&gt;
 
 Even so replicating results can be hard.
 ---
@@ -281,7 +255,7 @@ Even so replicating results can be hard.
 # Rationale for scripting analysis
 We ensure reproducibility of laboratory and field work by planning and recording in lab books and using standard protocols. 
 
-&lt;img src="../pics/rationale3.png" width="600px" /&gt;
+&lt;img src="pics/rationale3.png" width="600px" /&gt;
 
 
 Workflows for computational projects and the data analysis and reporting of other work can, and should, be 100% reproducible! Scripting is the way to achieve this.
@@ -292,7 +266,7 @@ Workflows for computational projects and the data analysis and reporting of othe
 
 That reproducibility applies to all aspects of the data workflow.
 
-&lt;img src="../pics/rationale5.png" width="600px" /&gt;
+&lt;img src="pics/rationale5.png" width="600px" /&gt;
 
 --
 
@@ -320,7 +294,7 @@ Open source and free
 
 R has reputation for catering to users who do not see themselves as programmers, and  allowing them to slide gradually into programming.
 
-![biologists](../pics/biologist1.png)
+![biologists](pics/biologist1.png)
 
 --
 
@@ -346,7 +320,7 @@ The R community is one of R's greatest assets, being vibrant, inclusive and supp
 ]
 
 .pull-right[
-&lt;img src="../pics/welcome_to_rstats_twitter.png" width="400px" /&gt;
+&lt;img src="pics/welcome_to_rstats_twitter.png" width="400px" /&gt;
 
 .font70[
 .footnote[
@@ -365,7 +339,7 @@ R Markdown is sometimes called R's "killer feature". Turns analyses into fully r
 
 Can run Python and other languages in R Markdown documents
 
-&lt;img src="../pics/rmarkdown_wizards.png" width="500px" /&gt;
+&lt;img src="pics/rmarkdown_wizards.png" width="500px" /&gt;
 
 .font70[
 .footnote[
@@ -545,9 +519,9 @@ Suppose we had just 3 individuals in each of two populations:
 
 ## Further Reading
 
-* "Ten simple rules for reproducible computational research" (Sandve Nekrutenko, et al., 2013)  
-* "Best practices for scientific computing" (Wilson Aruliah, et al., 2014)  
-* "Good enough practices in scientific computing" (Wilson Bryan, et al., 2017)  
+* "Ten simple rules for reproducible computational research" (Sandve Nekrutenko et al., 2013)  
+* "Best practices for scientific computing" (Wilson Aruliah et al., 2014)  
+* "Good enough practices in scientific computing" (Wilson Bryan et al., 2017)  
 * "Excuse Me, Do You Have a Moment to Talk About Version Control?" (Bryan, 2018)  
 
 ---
@@ -686,6 +660,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
